--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jose Miguel Herrera</title>
+  <title>Jose Miguel Herrera - Software Engineer and Music Producer</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
   />
   <style>
